--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl: "/help" # the subpath of your site, e.g. /blog/
+baseurl: "/docs" # the subpath of your site, e.g. /blog/
 
 # Build settings
 markdown: redcarpet
